styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

p {
  font-size: 22px;
}

small {
  font-size: 16px;
  color: #888;
}

/* Navigation bar */
#navbar {
  position: fixed;
  width: 100%;
  display: flex;
  background-color: white;
}

#header-flexbox {
  display: flex;
  justify-content: space-between;
}

#fficons {
  width: 300px;
  align-self: center;
}

#nytlogocont {
  justify-content: center;
  align-items: center;
  align-self: center;
}

#nytlogo {
  width: 15%;  
  justify-content: center;
  align-items: center;
  align-self: center;
}

#buttons-navbarcont {
  width: 300px;
}

button {
  background-color: rgb(86,123,149);
  border: none;
  color: white;
  display: inline-block;
  padding: 7px 10px 5px 10px;
  border-radius: 3px;
}

/* Header */

header {
  padding-top: 50px;
  text-align: center;
  width: 40%;
  padding-left: 30%;
  padding-right: 30%;
  /* border: 1px solid darkred; */
}

#title {
  display: inline-block;
  /* border: 1px solid darkorchid; */
  font-size: 48px;
}

/* +++ Article +++ */

.artpics1 {
  display: grid;
  grid-template-columns: 15% 70% 15%;
}

#one {
  grid-column-start: 2;
  max-width: 100%;
  height: auto;
}

#onefig {  
  grid-column-start: 2;
  color: #666;
}

#oneauth {
  grid-column-start: 2;
  display: inline-flex;
}

#dennis {
  color: #333;
}

#denniso {
  color: #333;
}

#denniso:hover {
  text-decoration: none;
}

#datsoc {
  display: flex;
  justify-content: space-between;
}

/* #dsdate
#dsbtns

/* #ffslist {
} */

/* .ffstyling {
  display: inline;
  border: 1px solid rebeccapurple;
} */ 

#clear {
  clear: both;
}

.artcont {
  display: grid;
  grid-template-columns: 27.5% 45% 27.5%
}

.article {
  grid-column-start: 2;
}

.artpics2 {
  display: grid;
  grid-template-columns: 15% 70% 15%;
}

#inflatt {
  grid-column-start: 2;
  font-size: 25px;
}

#inflagrid {
  grid-column-start: 2;
  display: grid;
  grid-template-areas:"im11 im12 im13 im14"
                      "par11 par12 par13 par14"
                      "im21 im22 im23 im24"
                      "par21 par22 par23 par24";
}

#inflation {
  grid-column-start: 2;
  grid-area: 1 / 1 / 5 / 5;
  max-width: 100%;
}

#inflationfig {  
  grid-column-start: 2;
}

.bold {
  font-weight: bold;
}

#par11 {
  grid-area: par11;
  font-size: 15px; 
}

#par12 {
  grid-area: par12;
  font-size: 15px;
}

#par13 {
  grid-area: par13;
  font-size: 15px;
}

#par14 {
  grid-area: par14;
  font-size: 15px;
}

#par21 {
  grid-area: par21;
  font-size: 15px;
}

#par22 {
  grid-area: par22;
  font-size: 15px;
}

#par23 {
  grid-area: par23;
  font-size: 15px;
}

#par24 {
  grid-area: par24;
  font-size: 15px;
}

#inflafoot {
  grid-column-start: 2;
}

#thanks {
  text-align: center;
}

#thanks > a {
  color: #326891;
  text-decoration: none;
  font-size: 24px;
}

.asidebox {
  padding-right: 30px;
  float: right;
}

.asideimg {
  width: 75px; 
}

#thanks {
  clear: both;
}

.nytline {
  size: 10%;
}

.videochamp {
  min-width: 100%; 
  min-height: 100%;
  width: auto; 
  height: auto;
}

#afterart {
  display: grid;
  grid-template-areas: "a1 . b1 . c1 . d"
                       ". . . . . . d" 
                       "a2 . b2 . c2 . d"
                       ". . . . . . d" 
                       "a3 . b3 . c3 . d"
                       ". . . . . . d" 
                       "a4 . b4 . c4 . d"
                       ". . . . . . d" 
                       "a5 . b5 . c5 . d"
                       ". . . . . . d" 
                       "a6 . b6 . c6 . d"
                       ". . . . . . d" 
                       "a7 . b7 . c7 . d"
                       ". . . . . . d" 
                       "a8 . b8 . c8 . d";
  grid-template-columns: 25% 5px 25% 5px 25% 30px 25%;
  /* padding-left: 30px;
  padding-right: 30px; */
}

#gaai1 {
  /* grid-area: a1; */
  width: 100%;
}

#gaai2 {
  /* grid-area: b1; */
  width: 100%;
}
#gaai3 {
  /* grid-area: c1; */
  width: 100%;
}
#gaai4 {
  /* grid-area: a3; */
  width: 100%;
}
#gaai5 {
  /* grid-area: b3; */
  width: 100%;
}
#gaai6 {
  /* grid-area: c3; */
  width: 100%;
}
#gaai7 {
  /* grid-area: a5; */
  width: 100%;
}
#gaai8 {
  /* grid-area: b5; */
  width: 100%;
}
#gaai9 {
  /* grid-area: c5; */
  width: 100%;
}

.aftergridlinks {
  color: #121212;
  text-decoration: none;
}

.aftergridlinks:hover {
  color: #797979;
  text-decoration: none;
}

#popular {
  /* display: grid; */
  grid-area: d;
}

#footlogohome {
  display: flex;
  justify-content: space-between;
  padding-right: 50px;
  padding-left: 50px;
}


#lastlogo {
  width: 15%;
}

#gohome {
  color: #567B95;
  text-decoration: none;
  font-weight: 700;
}

#footergrid {
  display: grid;
  grid-template-columns: 20% 16% 16% 16% 16% 16%;
  padding-right: 50px;
  padding-left: 50px;
}

#footergrid > section > ul > li > a {
  color: #474747;
  text-decoration: none;
}

#footergrid > section > ul > li > a:hover {
  text-decoration: underline;
}

#foot1 {
  grid-column-start: 1;
}

#foot2 {
  grid-column-start: 2;
}

#foot3 {
  grid-column-start: 3;
}

#foot4 {
  grid-column-start: 4;
}

#foot5 {
  grid-column-start: 5;
}

#foot6 {
  grid-column-start: 6;
}

#ulfl {
  display: flex;
  justify-content: space-between;
  padding-right: 100px;
  padding-left: 100px;
}

#ulfl > li > a {
  color: #666;
  text-decoration: none;
  font-size: 12px;
}

#ulfl > li > a:hover {
  color: #888;
  text-decoration: #888;
  font-size: 12px;
}


#expand {
  clear: both;
  position: fixed;
  background-color: #fff;
  border-top: 1px solid #333;
  width: 100%;
}

